styled the header with a default max width and also fixed the issue with horizontal overflow. Also added a logo

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -238,54 +238,28 @@ label, button, input {
   align-content: flex-start;
 }
 
-/* .card  {
-  
-  background-color: var(--primary5);
-  padding: 2rem;
-  border-radius:8px;
-  display: flex;
-  flex-direction: column;
-  width: 150px;
-  justify-items: center;
-  align-items: center;
-  text-decoration: none;
-  color: var(--text);
-  transition: box-shadow .3s;
-} */
-
-.flex-1rem {
-  display: flex;
-  gap: 1rem;
-}
-/* .card:hover {
-  box-shadow: 0 0 12px var(--secondary);
-} */
-
 .app-layout {
   display: flex;
   flex-direction: column;
   height: 100vh;
   background-color: var(--background);
   height: 100dvh;
-  /* width: clamp(320px, 100vw, 1280px) ; */
+ 
 }
 
-.app-layout .main-layout {
-  background-color: none;
-  flex: 1;
-  display: flex;
-}
-
-.app-layout header,  .app-layout footer {
+.header, .footer {
   padding: .5rem 1rem;
   flex-shrink: 0;
   background-color: var(--primary);
 }
 
 .main-layout {
-  width: clamp(320px, 100vw, 1080px); 
-  padding: .5rem;
+  box-sizing: border-box;
+  flex: 1;
+  display: flex;
+  width: clamp(320px, 100%, 1080px); 
   overflow-y: auto;
+  padding: .5rem;
   position: relative;
 }
 
@@ -293,11 +267,22 @@ label, button, input {
   overflow-y: hidden;
 }
 
-.header, .drawer{
+.header .content {
+  margin: auto;
+  width: clamp(320px, 100%, 1080px);
+  height: 100%;
+}
+
+.logo {
+  color: white;
+}
+.header .content, .drawer{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .header {
+  display: flex;
   align-items: center;
 }
 
@@ -659,11 +644,14 @@ position: absolute;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  box-sizing: border-box;
   
 }
 
 .cart-page .main {
-  display: flex;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 30%;
   gap: .5rem;
   flex: 1;
   overflow: hidden;
@@ -671,14 +659,12 @@ position: absolute;
 
 .cart-page .main .cart-list {
   margin: 0;
-  flex: 1;
   overflow-y: auto;
 }
 
 .checkout {
-  box-sizing: content-box;
+  box-sizing: border-box;
   padding: 1rem;
-  width: 300px;
   background-color: var(--surface-color);
 }
 
@@ -747,13 +733,7 @@ position: absolute;
 .height-fit-content {
   height: fit-content;
 }
-@media(max-width: 1080px) {
-  .checkout {
-    width: 260px;
-  }
 
-  
-}
 @media(max-width: 600px) {
   .hamburger {
     display: block;
@@ -830,6 +810,7 @@ position: absolute;
   }
   /* Shopping cart */
   .cart-page .main {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column-reverse;
     flex: 1;
